--- a/client/static/css/editor-test.css
+++ b/client/static/css/editor-test.css
@@ -12,3 +12,21 @@
 .editor_wrapper .editor-footer {
   margin-top: 0px;
 }
+
+#wrapper.toggled-2 #sidebar-wrapper {
+  width: 0px;
+}
+
+#wrapper.toggled-2 #page-content-wrapper {
+  margin-left: -300px;
+}
+
+#wrapper {
+  padding-left: 300px;
+}
+.sidebar-nav{
+  width: 300px;
+}
+#sidebar-wrapper {
+  width: 300px;
+}
