--- a/client/static/css/editor.css
+++ b/client/static/css/editor.css
@@ -29,6 +29,7 @@ body {
 }
 #wrapper.editor_wrapper #sidebar-wrapper {
     width: 300px;
+    top: 51px;
 }
 #wrapper.editor_wrapper #sidebar-wrapper .sidebar-nav {
     width: 300px;
